--- a/src/main/resources/templates/control/admin.html
+++ b/src/main/resources/templates/control/admin.html
@@ -17,7 +17,6 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
     <title>Admin Panel</title>
-    <script src="../../static/js/script.js"></script>
 </head>
 
 <body>
@@ -81,7 +80,7 @@
                 <div class="tab-content">
                     <div class="tab-pane active" id="users" role="tabpanel" aria-labelledby="users-tab">
                         <div class="bg-secondary text-white">All users</div>
-                        <table class="table">
+                        <table class="table" id="mytable">
                             <tr>
                                 <th>id</th>
                                 <th>login</th>
@@ -90,73 +89,56 @@
                                 <th>role</th>
                                 <th>edit</th>
                             </tr>
-                            <th:block th:each="user : ${userList}">
-                            <tr>
-                                <td th:text="${user.id}"></td>
-                                <td th:text="${user.login}"></td>
-                                <td th:text="${user.email}"></td>
-                                <td th:text="${user.password}"></td>
-                                <td>
-                                    <th:block th:each="role : ${user.roles}">
-                                        <div th:text="${role.getRole()}"></div>
-                                    </th:block>
-                                </td>
-                                <td>
-                                    <button type="button" class="btn btn-primary" data-toggle="modal"
-                                            th:attr="data-target='#exampleModal' + ${user.id}">Edit</button>
-                                    <!-- Modal -->
-                                    <div class="modal fade" th:attr="id='exampleModal' + ${user.id}" tabindex="-1" role="dialog"
-                                         aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                        <div class="modal-dialog" role="document">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h5 class="modal-title" id="exampleModalLabel">Edit user</h5>
-                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                        <span aria-hidden="true">&times;</span>
-                                                    </button>
-                                                </div>
-                                                <div class="modal-body container-fluid d-flex justify-content-center">
-                                                    <div class="col-6">
-                                                        <form class="d-flex flex-column" th:action="@{/control/edit}" th:object="${user}" th:attr="id='edit_form' + ${user.id}" method="POST">
-                                                            <input class="form-control" id="disabledInput" name="id" th:value="${user.id}" type="text"
-                                                                   placeholder="" hidden>
-                                                            <label for="disabledInput" class="font-weight-bold text-center">ID
-                                                                <input class="form-control" id="disabledInput" name="id" th:value="${user.id}" type="text"
-                                                                       placeholder="" disabled></label>
 
-                                                            <label for="Login" class="font-weight-bold text-center">Login
-                                                                <input type="text" class="form-control" name="login" th:value="${user.login}" id="Login"></label>
+                        </table>
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+                             aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Edit user</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body container-fluid d-flex justify-content-center">
+                                        <div class="col-6">
+                                            <form class="d-flex flex-column" action="/api/edit/" id="edit_form" method="POST">
+                                                <input class="form-control" id="Id" name="id" value="" type="text" hidden>
+                                                <label for="disabledInput" class="font-weight-bold text-center">ID
+                                                    <input class="form-control" name="id" value="" id="Id" type="text"
+                                                           placeholder="" disabled></label>
 
-                                                            <label for="Email" class="font-weight-bold text-center">Email
-                                                                <input type="text" class="form-control" name="email" th:value="${user.email}" id="Email"></label>
+                                                <label for="Login" class="font-weight-bold text-center">Login
+                                                    <input type="text" class="form-control" name="login" value="" id="Login"></label>
+
+                                                <label for="Email" class="font-weight-bold text-center">Email
+                                                    <input type="text" class="form-control" name="email" value="" id="Email"></label>
 
 
-                                                            <label for="Password" class="font-weight-bold text-center">Password
-                                                                <input type="password" class="form-control" name="password" th:value="${user.password}" id="Password"></label>
+                                                <label for="Password" class="font-weight-bold text-center">Password
+                                                    <input type="password" class="form-control" name="password" value="" id="Password"></label>
 
-                                                            <label for="Role" class="font-weight-bold text-center">Role
-                                                                <input type="text" class="form-control" name="role" th:value="${user.roles.get(0).role}" id="Role"></label>
-                                                        </form>
-                                                    </div>
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button type="button" class="btn btn-secondary"
-                                                            data-dismiss="modal">Закрыть</button>
-                                                    <button type="submit" th:attr="form='edit_form' + ${user.id}" class="btn btn-primary">Сохранить</button>
-                                                </div>
-                                            </div>
+                                                <label for="Role" class="font-weight-bold text-center">Role
+                                                    <input type="text" class="form-control" name="role" value="" id="Role"></label>
+                                            </form>
                                         </div>
                                     </div>
-                                </td>
-                            </tr>
-                            </th:block>
-                        </table>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                                data-dismiss="modal">Закрыть</button>
+                                        <button type="submit" form="edit_form" class="btn btn-primary">Сохранить</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
                     </div>
                     <div class="tab-pane" id="newuser" role="tabpanel" aria-labelledby="newuser-tab">
                         <div class="bg-secondary text-white">New user</div>
                         <div class="modal-body container-fluid d-flex justify-content-center">
-                            <form class="d-flex flex-column col-4" method="post" th:action="@{/control/add}" th:object="${user}">
+                            <form class="d-flex flex-column col-4" method="post" action="/api/add">
 
                                 <label for="newLogin" class="font-weight-bold text-center">Login
                                     <input type="text" class="form-control" name="login" id="newLogin"></label>
@@ -177,6 +159,74 @@
             </main>
         </div>
     </div>
+<script>
+    let id;
+    let login;
+    let email;
+    let password;
+    let role;
+    let button;
+    let url = 'http://localhost:8080/api/all';
+    let srole;
+
+    fetch(url)
+        .then(function (response) {
+            return response.json()
+        })
+        .then(function (json) {
+                console.log(json);
+            for (let i in json) {
+                id = json[i].id;
+                login = json[i].login;
+                email = json[i].email;
+                password = json[i].password;
+                role = json[i].roles[0]['role'];
+                button = '<button type="button" class="btn btn-primary" id="' + id + '">Edit</button>';
+
+                let row = "<tr>" +
+                    "<td>" + id + "</td>" +
+                    "<td>" + login + "</td>" +
+                    "<td>" + email + "</td>" +
+                    "<td>" + password + "</td>" +
+                    "<td>" + role + "</td>" +
+                    "<td>" + button + "</td>" +
+                    "</tr>";
+                $('#mytable').append(row);
+
+            }
+
+            $("button").on('click', function() {
+                let i = $(this).attr('id');
+
+                fetch(url)
+                    .then(function (response) {
+                        return response.json()
+                    })
+                    .then(function (json) {
+                        for (let a in json) {
+                            if (json[a].id == i) {
+                                id = json[a].id;
+                                login = json[a].login;
+                                email = json[a].email;
+                                password = json[a].password;
+                                srole = json[a].roles[0]['role'];
+                                break;
+                            }
+                        }
+
+                        $('form #Id').val(id);
+                        $('#Login').val(login);
+                        $('#Email').val(email);
+                        $('#Password').val(password);
+                        $('#Role').val(srole);
+                        $('#exampleModal').modal('show');
+                    })
+            });
+
+ })
+
+
+    </script>
 </body>
 
 </html>
