--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,6 +28,8 @@
     <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required="">
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   </form>
+  <a href="/google/auth">Login with Google</a>
+<a href="https://www.google.com/accounts/Logout?continue=https://appengine.google.com/_ah/logout?continue=http://localhost:8080">Google logout</a>
 </body>
 
 </html>
